--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension DBD::ODBC.
 
+0.17  July 2, 1998
+
+Changes now listed in the DBD::ODBC .pm file.
+
 0.16  July 25, 1997
 
   - Makefile update for Borland compiler on Win32.
