--- a/README
+++ b/README
@@ -2,10 +2,11 @@ DBD::Adabas -- DBD module interfacing the Adabas D database.
 
 This module is based on DBD::ODBC:
 
-   $Id: README,v 1.2 1998/07/14 10:55:08 joe Exp $
-   Copyright (c) 1994,1995,1996,1997  Tim Bunce
-   portions Copyright (c) 1997 Jeff Urlwin
-   portions Copyright (c) 1997 Thomas K. Wenrich
+   $Id: README,v 1.5 1998/08/08 16:58:30 timbo Exp $
+
+   Copyright (c) 1994,1995,1996,1997,1998  Tim Bunce
+   portions Copyright (c) 1997,1998 Jeff Urlwin
+   portions Copyright (c) 1997  Thomas K. Wenrich
    portions Copyright (c) 1998 Jochen Wiedmann
 
    You may distribute under the terms of either the GNU General Public
@@ -15,11 +16,10 @@ This module is based on DBD::ODBC:
 
 WARNING:
 ========
-THIS IS MOSTLY ALPHA SOFTWARE. Your mileage may vary.
 
-Most of the code (and most parts of this README) were stolen from the 
-DBD-Solid distribution.  I suspect most problems you may encounter with
-this release are related to my efforts to port it to straight ODBC.
+PLEASE READ THE ENTIRE README FILE CAREFULLY !
+  
+WARNING: THIS IS MOSTLY ALPHA SOFTWARE. Your mileage may vary.
 
 
 WHAT IS IT:
@@ -53,10 +53,10 @@ REQUIREMENTS:
 
     Build, test and install Perl 5 (at least 5.004).
     It is very important to TEST it and INSTALL it!
-
-    Build, test and install the DBI module (at least DBI 0.86).
+  
+    Build, test and install the DBI module (at least DBI 0.93).
     It is very important to TEST it and INSTALL it!
-
+  
     Remember to *read* the DBI README file!
 
 
@@ -201,3 +201,4 @@ Follow "Microsoft ODBC Desktop Database Drivers 3.5 For 32-Bit Programs"
 and "ODBC Drivers for Win95 Applications".
 For Access use version "Access ODBC driver 3.40.2111 27/03/96" or later.
 
+End.
